Summary of Work: * Fixed district border not showing. * Fixed slider logic to not allow for a tie in certan edge cases.
Known Issues:
* Not mobile (touch) friendly.

--- a/src/App.scss
+++ b/src/App.scss
@@ -227,7 +227,7 @@
             grid-column: 1/5;
           }
 
-          &.border-bottom-red, .border-bottom-blue, .border-bottom-green {
+          &.border-bottom-red, &.border-bottom-blue, &.border-bottom-green {
             border-bottom-style: solid;
             border-bottom-width: 0.5rem;
           }
